--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.19.1",
     "nodemon": "^3.0.1"
   }
 }
